<resources>
    <string name="app_name">AndrLayoutStarter</string>
    <string name="address">Số 118 Lê Duẩn, Hoàn Kiếm, Hà Nội .</string>
    <string name="title">TỔNG CÔNG TY ĐƯỜNG SẮT VIỆT NAM</string>
    <string name="contact">Điện Thoại: <b>19006469</b><br />\nEmail: <i>dsvn@vr.com.vn</i></string>
    <string name="cert">Giấy chứng nhận ĐKKD số 113642 theo QĐ thành lập số 973/QĐ-TTg ngày 25/06/2010 của Thủ tướng Chính phủ.</string>
    <string name="business_code">Mã số doanh nghiệp: 0100105052, đăng ký lần đầu ngày 26/07/2010 đăng ký thay đổi lần 4 ngày 27/06/2014 tại Sở KHĐT Thành phố Hà Nội</string>

    <string name="book">Đặt vé</string>
    <string name="booking">Đặt vé tàu</string>
    <string name="field_name">Họ và tên</string>
    <string name="field_phone">Số điện thoại</string>
    <string name="field_from">Ga đi</string>
    <string name="field_to">Ga đến</string>
    <string name="field_start_date">Ngày đi</string>
    <string name="field_end_date">Ngày về</string>
    <string name="field_human">Người lớn</string>
    <string name="field_small_human">Trẻ em</string>

    <string name="service">Dịch vụ</string>
    <string name="service_train">Tàu cao tốc</string>
    <string name="service_fix">Dịch vụ sửa chữa</string>
    <string name="service_travel">Du lịch quốc tế</string>
    <string name="service_storage">Kho bãi</string>

    <string name="news">Tin tức</string>
    <string name="news_lorem_title">Tàu chất lượng cao vận tải Hà Nội</string>
    <string name="news_lorem_content">Một thực tế đã có từ lâu rằng người đọc sẽ bị phân tâm bởi nội dung có thể đọc được của một trang khi nhìn vào bố cục của nó. Điểm đáng chú ý của việc sử dụng Lorem Ipsum là nó có sự phân bố các chữ cái bình thường ít nhiều, trái ngược với việc sử dụng \'Nội dung ở đây, nội dung ở đây\', khiến nó trông giống như tiếng Anh có thể đọc được.</string>
</resources>
