<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#008ACB"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:text="Đặt vé online"
            android:textSize="18sp"
            android:layout_gravity="center"/>

       <LinearLayout
           android:layout_gravity="center"
           android:layout_weight="1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="end">
           <Space
               android:layout_width="20dp"
               android:layout_height="wrap_content" />
           <Button
               android:background="@drawable/btn_bg_circle"
               android:layout_width="32dp"
               android:layout_height="32dp"
               android:contentDescription="icon"/>

           <Space
               android:layout_width="20dp"
               android:layout_height="wrap_content" />
           <Button
               android:background="@drawable/btn_bg_circle"
               android:layout_width="32dp"
               android:layout_height="32dp"
               android:contentDescription="icon"/>

           <Space
               android:layout_width="20dp"
               android:layout_height="wrap_content" />
           <Button
               android:background="@drawable/btn_bg_circle"
               android:layout_width="32dp"
               android:layout_height="32dp"
               android:contentDescription="icon"/>
       </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_marginBottom="10dp"
                android:paddingHorizontal="5dp"
                android:src="@drawable/dsvn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/title"
                android:textSize="24sp"
                android:textColor="#ff9800"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/address" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/contact" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/cert" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/business_code" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#008ACB"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Giờ tàu | Khuyến mại | Quy định | Hướng dẫn"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>